# SpyGame2.0

./: .env  .gitignore  manage.py  pyproject.toml
main/: admin.py  models.py  old_views.py  roomlogic.py  serializers.py  views.py
main/migrations/: 0001_initial.py  0002_room_password.py  0003_room_owner_alter_room_password.py  0004_alter_room_link.py  0005_alter_room_owner.py  0006_room_id_of_connected_player_updatehistory.py  0007_room_locations_group_alter_room_num_of_players.py  0008_alter_locations_description.py  0009_alter_room_locations_group.py  0010_alter_room_num_of_players.py  0011_alter_room_num_of_players.py  0012_room_current_location_room_spy_id.py  0013_alter_room_owner.py  0014_alter_locationsgroup_name_alter_room_link.py  0015_roomconnection_delete_updatehistory_and_more.py  0016_remove_room_id_of_connected_player.py
spy/: asgi.py  settings.py  urls.py  wsgi.py
